2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Specify position for build step.

	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Enable designer class
	updating for UserControls and MasterPages.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/BaseHtmlEditorExtension.cs: Split out the HTML
	editor extension. Add document outlining.

	* Makefile.am:
	* AspNetAddIn.mdp: Updated.

	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.Html/HtmlParser.cs: Added an HTML parser.

	* MonoDevelop.AspNet.Gui/HtmlEditorExtension.cs: Split out the HTML
	editor extension. Add document outlining. Mostly extracted from
	Moonlight addin.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AspNetAddIn.mdp:
	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/BaseHtmlEditorExtension.cs: Renamed file.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs: Move re-usable HTML
	editing into base class in preparation for other changes.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs: Tidy up
	doctype->schema resolution code, and only try to resolve doctype when
	it changes. Use case-insensitive completion.

2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Track fix in text
	editor's completion line/col indexing. It's now 1-indexed, as it
	should be. Fix attribute value type resolution fallback.

	* MonoDevelop.AspNet.Parser/Document.cs: Comment out some noisy debug
	code.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Use new API; move default
	build action code into GetDefaultBuildAction override.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
