@@ -1,5 +1,12 @@
 2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.AspNet/WebTypeManager.cs:
+	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
+	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Include
+	controls referenced by Register directives when listing tags.
+
+2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.AspNet.addin.xml: Specify position for build step.
 
 	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Enable designer class
